# demos

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  LICENSE  README.md  environment.yml  requirements.txt  setup.cfg
.github/workflows/: commit-verification.yml
cpu/: CPU_demos.ipynb
cpu/notebooks/: 1-Steady-state_design.ipynb  10-Calibration_broken_wo_event.ipynb  11-Calibration_broken_with_event.ipynb  12-DoE.ipynb  13-Montecarlo.ipynb  14-Solver_debugging.ipynb  15-Parametric_geometry.ipynb  16-Monitoring_notebook.ipynb  2-Transient_simulation.ipynb  3-Generate_nominal_operation_data.ipynb  4-Generate_dysfunctional_operation_data.ipynb  5-Same_operating_conditions_simulation.ipynb  6-AI_dataset_for_event_detection.ipynb  7-AI_training_for_event_detection.ipynb  8-Spot_event_using_ai.ipynb  9-Calibration_transient_basics.ipynb  Parametric_geometry.ipynb  ai_dataset_for_event_detection.ipynb  ai_training_for_event_detection.ipynb  calibration_broken_with_event.ipynb  calibration_broken_wo_event.ipynb  calibration_transient_basics.ipynb  doe.ipynb  generate_dysfunctional_operation_data.ipynb  generate_nominal_operation_data.ipynb  monitoring_notebook.ipynb  montecarlo.ipynb  same_operating_conditions_simulation.ipynb  solver_debugging.ipynb  spot_event_using_ai.ipynb  steady-state_design.ipynb  transient_simulation.ipynb
cpu/ports/: __init__.py  geom_port.py
cpu/systems/: __init__.py  casing_geometry.py  cpusystem.py  fan.py  fancontroller.py  heatexchanger.py  parametric_blade_geometry.py  (+1 more)
twiinit_demos/: Linardoe.ipynb  MonteCarlo.ipynb  demo_non_linear.ipynb
(+109 files in other folders)
